--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,10 +1,10 @@
 .generalButton {
     box-sizing: border-box;
     display: inline-block;
-    padding: .5rem 1rem;
-    text-transform: uppercase;
-    outline: none;
     position: relative;
+    padding: .5rem 1rem;
+    outline: none;
+    border-radius: 50px;
 }
 
 .generalButton p {
@@ -14,6 +14,7 @@
     font-weight: 500;
     line-height: 1.75;
     letter-spacing: 0.02857em;
+    text-transform: uppercase;
 }
 
 .generalButton:hover {
