--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -4,7 +4,7 @@
     position: relative;
     padding: .5rem 1rem;
     outline: none;
-    border-radius: 50px;
+    border-radius: 10px;
 }
 
 .generalButton p {
@@ -15,6 +15,7 @@
     line-height: 1.75;
     letter-spacing: 0.02857em;
     text-transform: uppercase;
+    user-select: none;
 }
 
 .generalButton:hover {
