--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -2,18 +2,34 @@
     position: fixed;
     top: 0; bottom: 0;
     left: 0; right: 0;
-
     background: black;
-    opacity: 0.5;
+    /*  */
+    transition: opacity .5s;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modalWrapperOpen {
+    opacity: .3;
+    pointer-events: initial;
 }
 
 .modal {
     position: absolute;
-
     width: max-content;
     height: max-content;
     padding: 1rem;
     background: white;
     border-radius: 10px;
     box-shadow: 0 0 12px #0000004d;
+    /*  */
+    transition: transform .2s, opacity .2s;
+    transform: scale(0);
+    opacity: 0;
+}
+
+.modalOpen {
+    transition: transform .2s, opacity .2s;
+    transform: scale(1);
+    opacity: 1;
 }
